--- a/visualizer/style/global_style.qss
+++ b/visualizer/style/global_style.qss
@@ -2,6 +2,9 @@ QWidget, QFrame {
     background-color: #3f3f3f;  
     color: #f0f0f0;
 }
+QDialog, QWidget#GUI {
+    border: 1px solid #333;
+}
 QPushButton {
     background-color: #111111; 
     color: #f0f0f0;
@@ -9,7 +12,7 @@ QPushButton {
     padding: 6px 12px;
     border-radius: 4px;
 }
-QPushButton#exitButton {
+QPushButton#EXIT {
     background-color: red;      
     color: white;
     font-weight: bold;
